<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:title="@string/lenovoparts_title">

    <Preference
        android:key="header"
        android:layout="@layout/header_animation"
        android:clickable="false"
        android:selectable="false" />

    <PreferenceCategory
        android:title="@string/touchscreen_title">
        <com.lenovo.parts.preferences.SecureSettingSwitchPreference
            android:key="glove_mode"
            android:defaultValue="false"
            android:title="@string/glove_mode_title"
            android:summary="@string/glove_mode_summary"
            android:icon="@drawable/ic_glove_mode" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="vibration"
        android:title="@string/vibration_category">
        <com.lenovo.parts.preferences.VibrationSeekBarPreference
            android:defaultValue="20"
            android:key="vibration_strength"
            android:max="100"
            android:title="@string/vibration_strength_title"
            android:icon="@drawable/ic_vibrate"
            app:min="1" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="torch"
        android:title="@string/torch_category">
        <com.lenovo.parts.preferences.CustomSeekBarPreference
            android:defaultValue="200"
            android:key="white_torch_brightness"
            android:max="200"
            app:min="0"
            android:icon="@drawable/ic_torch"
            android:title="@string/white_torch_brightness_title" />

        <com.lenovo.parts.preferences.CustomSeekBarPreference
            android:defaultValue="200"
            android:key="yellow_torch_brightness"
            android:max="200"
            app:min="0"
            android:icon="@drawable/ic_torch"
            android:title="@string/yellow_torch_brightness_title" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="audio"
        android:title="@string/audio_category">
        <com.lenovo.parts.preferences.CustomSeekBarPreference
            android:defaultValue="4"
            android:key="headphone_gain"
            android:max="20"
            app:min="-40"
            android:icon="@drawable/ic_headphone"
            android:title="@string/headphone_gain" />
    </PreferenceCategory>

   <PreferenceCategory
        android:title="@string/fp_title">
    <Preference
        android:key="fingerprint_gestures"
        android:title="@string/fp_settings_title"
        android:summary="@string/fp_settings_summary"
        android:icon="@drawable/ic_fp_gestures"
        android:persistent="false" >
        <intent android:action="android.intent.action.MAIN"
                android:targetPackage="com.lenovo.gestures"
                android:targetClass="com.lenovo.gestures.ButtonSettingsActivity" />
        </Preference>
    </PreferenceCategory>

    <PreferenceCategory
        android:key="display"
        android:title="@string/display_category">
        <Preference
            android:key="device_kcal"
            android:persistent="false"
            android:icon="@drawable/ic_kcal"
            android:title="@string/device_kcal_title"
            android:summary="@string/device_kcal_summary" >
            <intent
                android:action="android.intent.action.MAIN"
                android:targetClass="com.lenovo.parts.kcal.KCalSettingsActivity"
                android:targetPackage="com.lenovo.parts.kcal" />
        </Preference>

        <com.lenovo.parts.preferences.SecureSettingSwitchPreference
            android:key="fps_info"
            android:icon="@drawable/ic_fps_info"
            android:title="@string/fps_info_title"
            android:summary="@string/fps_info_summary"
            android:persistent="true"
            android:defaultValue="false" />
    </PreferenceCategory>
</PreferenceScreen>
